--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "myNEU autoLogin",
-  "version": "1.0",
+  "version": "1.0.1",
   "permissions": [
     "declarativeContent",
     "storage"
@@ -18,5 +18,10 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-  "manifest_version": 2
+  "manifest_version": 2,
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  }
 }
